- changed Set implementation from HashSet to TreeSet in User.restaurants to handle sorting by name - implemented Comparable in RestaurantDTO - updated tests